samples/_failures_safe/1761071504_1843e4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2facebcf.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_2facebcf.c:144:9: error: expected expression at end of input
  144 |         for (
      |         ^~~
./samples/SAFE/__tmp_2facebcf.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2facebcf.c:144:9: error: expected declaration or statement at end of input
